--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -33,6 +33,14 @@ html {
 
   @media only screen and (max-width: $bp-medium) {
     font-size: 50%;
+    // max-width: 100%; //
+    // height: 100vh; //
+    // margin: 0; //
+    // border-radius: 0; //
+
+    .container {
+      // height: 100vh; //
+    }
   }
 }
 
@@ -67,5 +75,22 @@ body {
     max-width: 100%;
     margin: 0;
     border-radius: 0;
+  }
+
+  // Consider container grid-redesign at 750px and smaller screens
+
+  // make header flex column so that top is logo, then nav, then search
+  // Maybe 3-5 row list with pagination on swipe
+  // where recipe is displayed 'block' as side-drawer with back-button
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 50%;
+    // height: 100vh; //
+  }
+
+  @media only screen and (max-width: $bp-small) {
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
   }
 }
