--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,8 +13,10 @@ $gradient: linear-gradient(to right bottom, $color-grad-1, $color-grad-2);
 
 $bp-large: 78.15em; // 1250px
 $bp-medium: 61.25em; // 980px
-$bp-small: 37.5em; // 600px
+$bp-mediumer: 48em; // 768px
+$bp-small: 34.0625em; // 545px
 $bp-smallest: 31.25em; // 500px
+$bp-tiny: 21.875em; // 350px
 
 * {
   margin: 0;
@@ -33,14 +35,18 @@ html {
 
   @media only screen and (max-width: $bp-medium) {
     font-size: 50%;
-    // max-width: 100%; //
-    // height: 100vh; //
-    // margin: 0; //
-    // border-radius: 0; //
-
-    .container {
-      // height: 100vh; //
-    }
+  }
+  @media only screen and (max-width: $bp-mediumer) {
+    font-size: 37.5%;
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 35%;
+  }
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 33%;
+  }
+  @media only screen and (max-width: $bp-tiny) {
+    font-size: 30%;
   }
 }
 
@@ -53,6 +59,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   min-height: calc(100vh - 2 * 4vw);
+
+  // min-height: calc(100vh);
 }
 
 .container {
@@ -75,22 +83,31 @@ body {
     max-width: 100%;
     margin: 0;
     border-radius: 0;
+    min-height: calc(100vh);
   }
-
-  // Consider container grid-redesign at 750px and smaller screens
-
-  // make header flex column so that top is logo, then nav, then search
-  // Maybe 3-5 row list with pagination on swipe
-  // where recipe is displayed 'block' as side-drawer with back-button
 
   @media only screen and (max-width: $bp-medium) {
-    font-size: 50%;
-    // height: 100vh; //
+    // margin: 2rem;
+    // height: 100%;
+    min-height: calc(100vh);
   }
 
-  @media only screen and (max-width: $bp-small) {
+  @media only screen and (max-width: $bp-mediumer) {
+    // margin: 2rem;
+    min-height: calc(100vh);
   }
 
   @media only screen and (max-width: $bp-smallest) {
+    height: 100%;
+    margin: 0;
+    display: grid;
+
+    // Restructure grid layout
+    grid-template-rows: 20rem minmax(100rem, auto);
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'head'
+      'list'
+      'recipe';
   }
 }
