--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -69,6 +69,10 @@
   align-items: center;
   transition: all 0.2s;
 
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 1.75rem;
+  }
+
   svg {
     height: 1.6rem;
     width: 1.6rem;
