--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,6 +9,13 @@
     margin-left: 4rem;
     height: 4.6rem;
     display: block;
+
+    @media only screen and (max-width: $bp-mediumer) {
+      height: 6rem;
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      height: 6.6rem;
+    }
   }
 }
 
@@ -44,10 +51,22 @@
     @media only screen and (max-width: $bp-medium) {
       width: auto;
 
-      &::placeholder {
-        color: white;
-      }
+      // &::placeholder {
+      //   color: white;
+      // }
     }
+
+    @media only screen and (max-width: $bp-mediumer) {
+      width: 25vw;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      width: 40vw;
+    }
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    padding-left: 3rem;
   }
 
   &__btn {
@@ -60,14 +79,27 @@
   align-self: stretch;
   margin-right: 2.5rem;
 
+  @media only screen and (max-width: $bp-smallest) {
+    margin: 0;
+  }
+
   &__list {
     list-style: none;
     display: flex;
     height: 100%;
+
+    @media only screen and (max-width: $bp-smallest) {
+      justify-content: center;
+    }
   }
 
   &__item {
     position: relative;
+
+    @media only screen and (max-width: $bp-smallest) {
+      padding: 0 3rem;
+      margin-bottom: 1rem;
+    }
   }
 
   &__btn {
@@ -140,5 +172,23 @@
   .nav__btn--bookmarks:hover + & {
     visibility: visible;
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: $bp-smallest) {
+  body {
+    max-width: calc(100vw);
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  .header {
+    flex-direction: column;
+
+    &__logo {
+      margin: 1rem auto 0 auto;
+    }
   }
 }
