--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -39,4 +39,8 @@
   .twitter-link:visited {
     color: $color-grey-dark-2;
   }
+
+  @media only screen and (max-width: $bp-smallest) {
+    display: none;
+  }
 }
