--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -12,6 +12,13 @@
   z-index: 1000;
   transition: all 0.5s;
 
+  @media only screen and (max-width: $bp-smallest) {
+    width: 100%;
+  }
+  @media only screen and (max-width: $bp-small) {
+    width: 100%;
+  }
+
   .btn--close-modal {
     font-family: inherit;
     color: inherit;
@@ -57,6 +64,9 @@
       font-size: 1.5rem;
       font-weight: 600;
       color: inherit;
+      @media only screen and (max-width: $bp-smallest) {
+        font-size: 1.5rem;
+      }
     }
 
     & input {
