--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -29,8 +29,7 @@
   &__img {
     display: block;
     width: 100%;
-    max-width: 100%;
-    display: block;
+    // max-width: 100%;
     height: 100%;
     object-fit: cover;
   }
