--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -28,7 +28,7 @@
 
   &__img {
     display: block;
-    // width: 100%;
+    width: 100%;
     max-width: 100%;
     height: 100%;
     object-fit: cover;
