--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -42,10 +42,10 @@ html {
   @media only screen and (max-width: $bp-small) {
     font-size: 35%;
   }
-  @media only screen and (max-width: $bp-smallest) {
+  @media only screen and (max-width: $bp-smallest) and (orientation: portrait) {
     font-size: 33%;
   }
-  @media only screen and (max-width: $bp-tiny) {
+  @media only screen and (max-width: $bp-tiny) and (orientation: portrait) {
     font-size: 30%;
   }
 }
