--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -90,12 +90,14 @@ body {
     min-height: calc(100vh);
   }
 
-  @media only screen and (max-width: $bp-mediumer) {
+  @media only screen and (max-width: $bp-mediumer) and (orientation: portrait) {
     // margin: 2rem;
+    max-width: 100%;
     min-height: calc(100vh);
   }
 
-  @media only screen and (max-width: $bp-smallest) {
+  @media only screen and (max-width: $bp-smallest) and (orientation: portrait) {
+    max-width: 100%;
     height: 100%;
     margin: 0;
     display: grid;
