max-width bug fixed for recipe &__details/__info

--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -69,6 +69,10 @@
     display: flex;
     align-items: center;
     padding: 7.5rem 8rem 3.5rem 8rem;
+    @media (max-width: 767px) {
+      padding: 7.5rem 10px 3.5rem;
+      justify-content: center;
+    }
   }
 
   &__info {
@@ -79,6 +83,9 @@
 
     &:not(:last-child) {
       margin-right: 4.5rem;
+      @media (max-width: 767px) {
+        margin-right: 2.5rem;
+      }
     }
   }
 
