home link on header__logo

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,8 +9,11 @@
     flex-direction: column;
   }
 
-  &__logo {
+  &__home {
     margin-left: 4rem;
+  }
+
+  &__logo {
     height: 4.6rem;
     display: block;
 
