--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -52,7 +52,13 @@
 .upload {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 4rem 6rem;
+  @media only screen and (max-width: $bp-smallest) {
+    grid-template-columns: 1fr;
+  }
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: 1fr;
+  }
+  gap: 4rem;
 
   &__column {
     display: grid;
