--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -820,7 +820,17 @@ body {
 .upload {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 4rem 6rem;
+  gap: 4rem;
+}
+@media only screen and (max-width: 31.25em) {
+  .upload {
+    grid-template-columns: 1fr;
+  }
+}
+@media only screen and (max-width: 34.0625em) {
+  .upload {
+    grid-template-columns: 1fr;
+  }
 }
 .upload__column {
   display: grid;
