--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -29,6 +29,13 @@
   }
 }
 
+.go-to-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem 0;
+}
+
 .copyright {
   color: $color-grey-dark-2;
   font-size: 1.2rem;
